<resources>
    <string name="app_name">My Journal</string>
    <string name="title">Embrace the \njourney</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="create">Sign up</string>
    <string name="username">Username</string>
    <string name="title_hint">Title</string>
    <string name="thoughts">Your Thoughts</string>
    <string name="save_button">SAVE</string>
    <string name="logout">Log Out</string>
    <string name="add_thought">Add Thought</string>
</resources>