<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_home_bg"
    tools:context=".PostJournalActivity"

    >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:alpha="0.85"
        android:src="@drawable/journal"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:alpha="0.7"
        app:srcCompat="@drawable/baseline_add_a_photo_white_24dp" />
    <LinearLayout
        android:paddingHorizontal="5dp"
        android:background="@color/my_blue"
        android:alpha="0.6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="7dp">
        <TextView
            android:id="@+id/post_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ritu"
            android:fontFamily="@font/montserrat"
            android:textSize="17sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="7"
    android:orientation="vertical">
    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="15dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/input_outline" />

    <EditText
        android:id="@+id/post_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/thoughts"
        android:inputType="textMultiLine"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:textSize="19sp"
        android:background="@drawable/input_outline" />

</LinearLayout>

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible" />


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/my_blue"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="20dp">

        <Button
            android:id="@+id/post_save_journal_button"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:textSize="19dp"
            android:background="@android:color/transparent"
            android:text="@string/save_button"
            android:textColor="@color/colorAccent" />
    </androidx.cardview.widget.CardView>

</LinearLayout>