<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="21dp"
    android:gravity="center"
    android:background="@drawable/gradient_home_bg">

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/montserrat"
        android:text="@string/create"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/coustard"
                android:text="Login"
                android:textColor="@color/colorAccent"
                android:textSize="34sp" />
            <ProgressBar
                android:id="@+id/progress"
                style="?android:progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="15dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/baseline_person_outline_black_24dp"
                    android:layout_gravity="right"
                    android:alpha="0.5"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="7dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_lock_black_24dp"
                    android:layout_gravity="right"
                    android:alpha="0.5"
                    android:layout_marginRight="13dp"
                    android:layout_marginTop="11dp"/>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="20dp">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/my_blue"
                android:fontFamily="@font/montserrat"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="21sp"
            android:textColor="@color/my_light_gray"
            android:text="Or"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="20dp"
                android:layout_marginTop="35dp"
                app:cardCornerRadius="20dp"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:text="Sign in with Google"
                    android:textColor="@color/my_dark_gray"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/google"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="11dp"/>

            </androidx.cardview.widget.CardView>


    </LinearLayout>



</LinearLayout>